# elovate-landing-page

./: .gitignore  design.md  index.css  index.html  index.js  landing.css  landing.html  landing.js
.cursor/skills/git-workflow/: SKILL.md
tools/normalize_outfits/: README.md  pyproject.toml
tools/normalize_outfits/normalize_outfits/: __init__.py  cli.py  config.py  discovery.py  imageio.py  inspect.py  normalize.py
tools/normalize_outfits/reports/: INSPECTION_NOTES.md  measurements.csv  summary.json
tools/normalize_outfits/reports/normalized/: measurements.csv  summary.json
